--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 
+#ignore .DS_Stores from Macs
+*.DS_Store
+
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
 
